[package]
name = "shmemfdrs"
version = "0.1.1"
authors = [ "Greg V <greg@unrelenting.technology>", "The Servo Project Developers" ]
keywords = [ "memfd", "SHM_ANON", "SharedMemory", "shm", "IPC" ]
categories = [ "os::unix-apis" ]
description = "Creates anonymous shared memory file descriptors for IPC on Unix platforms, using memfd/SHM_ANON/shm_open."
license = "MIT/Apache-2.0"
homepage = "https://github.com/myfreeweb/shmemfdrs"
repository = "https://github.com/myfreeweb/shmemfdrs"
edition = "2018"

[dependencies]
libc = "0.2.33"

[features]
memfd = []
